Re-style cursor to fix bug with word wrapping.

--- a/app/components/Tile/Tile.scss
+++ b/app/components/Tile/Tile.scss
@@ -1,23 +1,28 @@
 .tile-container {
   position: relative;
   color: #fff;
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Lato', sans-serif;
   overflow: hidden;
+  font-size: 2rem;
 
   .tile {
     position: absolute;
     display: flex;
-    justify-content: center;
     align-items: center;
     height: 100%;
     width: 100%;
+    font-size: 2vw;
 
     .tile-text {
       animation: blink 0.75s step-end infinite;
-      border-right: 2px solid #fff;
-      padding-right: 2px;
-      text-shadow: 0px 1px 1px rgb(97, 97, 97);
-      word-wrap: normal;
+      margin-left: 25px;
+      text-shadow: 0 0.025em 0 rgba(0, 0, 0, 0.25);
+      word-wrap: break-word;
+      .cursor {
+        margin-left: 2px;
+        border-left: 1px solid #fff;
+        animation: blink 0.75s step-end infinite;
+      }
     }
 
     &.from-top {
